--- a/public/product_detail.html
+++ b/public/product_detail.html
@@ -93,14 +93,14 @@
         </div>
 
         <div id="body_background">
-            <div id="directory"><p>Home / Shop / Product Detail </p></div>
+            <div id="directory"><p>Home / Shop / Product Detail</p></div>
         </div>
 
         <div class="main_body_productPage">
             <div class="content">
 
                 <div class="left_main">
-                    <div id="image_container" class="image_conatiner" style="background: url('assets/item1.jpg');background-size: cover;background-position: center;"><img src="assets/item1.jpg" alt=""></div>
+                    <div id="image_container" class="image_conatiner"></div>
                 </div>
 
                 <div class="right_main">
