--- a/public/index.html
+++ b/public/index.html
@@ -110,8 +110,8 @@
 
         <div class="item_div">
             <div class="item-section">
-                <div class="items">
-                    <section class="item">
+                <div class="items" id="items">
+                    <!-- <section class="item">
                         <div class="itm_img" style="background: url('assets/item1.jpg');background-size: cover;background-position: center;"><i class="fa fa-heart"></i></div> 
                                 <div class="itemExtra">
                                     <div class="desc">
@@ -149,7 +149,7 @@
                                 <h3>item1</h3>
                                 <h4>₦3000</h4>
                             </div>
-                    </section>
+                    </section> -->
 
                 </div>
             </div>
@@ -160,7 +160,7 @@
  <div class="item_div">
             <div class="item-section">
                 <div class="items">
-                    <section class="item">
+                    <!-- <section class="item">
                         <div class="itm_img" style="background: url('assets/item6.jpg');background-size: cover;background-position: center;"><i class="fa fa-heart"></i></div>
                             <div class="desc">
                                 <h3>item1</h3>
@@ -199,7 +199,7 @@
                                 <h3>item1</h3>
                                 <h4>₦3000</h4>
                             </div>
-                    </section>
+                    </section> -->
                 </div>
             </div>
         </div>
